--- a/CustomCellTutorial/Base.lproj/Main_iPhone.storyboard
+++ b/CustomCellTutorial/Base.lproj/Main_iPhone.storyboard
@@ -1,17 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="w8i-eq-QCD"/>
+                        <viewControllerLayoutGuide type="bottom" id="Sgw-9N-a3J"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="P0y-gZ-LNH">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="uv1-Dz-SiY"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="X4z-pL-dUy"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P0y-gZ-LNH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="5m9-l3-19j"/>
+                            <constraint firstItem="P0y-gZ-LNH" firstAttribute="top" secondItem="w8i-eq-QCD" secondAttribute="bottom" id="7NM-pz-hmc"/>
+                            <constraint firstAttribute="trailing" secondItem="P0y-gZ-LNH" secondAttribute="trailing" id="BwC-lv-jwB"/>
+                            <constraint firstItem="Sgw-9N-a3J" firstAttribute="top" secondItem="P0y-gZ-LNH" secondAttribute="bottom" id="UXC-Zw-jWc"/>
+                            <constraint firstItem="P0y-gZ-LNH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="V3K-QS-ngx"/>
+                            <constraint firstAttribute="trailing" secondItem="P0y-gZ-LNH" secondAttribute="trailing" id="bDS-N7-9G2"/>
+                            <constraint firstItem="Sgw-9N-a3J" firstAttribute="top" secondItem="P0y-gZ-LNH" secondAttribute="bottom" id="qPF-le-p9t"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
